--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col text-center" id="input_">
         <input class="form-text" type="text" name="input_" placeholder="Введите номер для поиска" autofocus />
-        <button class="btn btn-success btn-sm" type="submit button" id="search_btn" name="count">Поиск!</button>
+        <button class="btn btn-success btn-sm" type="submit button" id="btn_" name="count">Поиск!</button>
         <div id="result">
           <label class="text-success">Результат поиска:</label>
           <label class="text-success">{{result}}</label>
