--- a/templates/source.html
+++ b/templates/source.html
@@ -24,7 +24,8 @@
   </body>
   <footer role="contentinfo" class="container">
     <div id="footer_">
-      <a class="link-opacity-100" href="{{ url_for('index') }}">Домой</a>
+      <a class="link-opacity-100" href="{{ url_for('index') }}" id="link_">Домой</a>
+      <a class="link-opacity-100" href="{{ url_for('add') }}" id="link_">Добавить</a>
     </div>
   </footer>
   <script src="static/scripts/themeToggle.js"></script>
