--- a/templates/addPage.html
+++ b/templates/addPage.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col text-center" id="input_">
         <input class="form-text" type="text" name="input_" placeholder="Введите номер для добавления" autofocus />
-        <button class="btn btn-success btn-sm" type="submit button" id="btn_" name="count">Поиск!</button>
+        <button class="btn btn-success btn-sm" type="submit button" id="btn_" name="addBtn">Добавить!</button>
       </div>
     </div>
   </div>
