--- a/templates/source.html
+++ b/templates/source.html
@@ -26,6 +26,7 @@
     <div id="footer_">
       <a class="link-opacity-100" href="{{ url_for('index') }}" id="link_">Домой</a>
       <a class="link-opacity-100" href="{{ url_for('add') }}" id="link_">Добавить</a>
+      <a class="link-opacity-100" href="{{ url_for('remove') }}" id="link_">Удалить</a>
     </div>
   </footer>
   <script src="static/scripts/themeToggle.js"></script>
