--- a/templates/removePage.html
+++ b/templates/removePage.html
@@ -1,10 +1,26 @@
 {% extends "source.html" %} {% block content %}
 <form method="post">
   <div class="container">
-    <div class="row">
-      <div class="col text-center" id="input_">
-        <input class="form-text" type="text" name="input_" placeholder="Введите номер для удаления" autofocus />
-        <button class="btn btn-success btn-sm" type="submit button" id="btn_" name="removeBtn">Удалить!</button>
+    <div class="row justify-content-center">
+      <div class="col text-center">
+        <div class="container d-flex justify-content-center">
+          <input
+            class="form-control"
+            class="form-text"
+            type="text"
+            name="input_"
+            placeholder="Введите номер для удаления"
+            autofocus
+          />
+          <button
+            class="btn btn-success btn-sm"
+            type="submit button"
+            id="btn_"
+            name="removeBtn"
+          >
+            Удалить!
+          </button>
+        </div>
       </div>
     </div>
   </div>
