Completed cars' addition

--- a/templates/addPage.html
+++ b/templates/addPage.html
@@ -21,6 +21,13 @@
           <input
             class="form-control"
             type="text"
+            name="nameInput"
+            id="input_"
+            placeholder="Введите имя для добавления"
+          />
+          <input
+            class="form-control"
+            type="text"
             name="patronymicInput"
             id="input_"
             placeholder="Введите отчество для добавления"
@@ -44,7 +51,7 @@
             type="text"
             name="carInput"
             id="input_"
-            placeholder="Введите номер машины для добавления"
+            placeholder="Введите модель машины для добавления"
           />
           <button type="submit" id="btn_s" class="btn btn-success">
             Добавить!
