--- a/templates/removePage.html
+++ b/templates/removePage.html
@@ -1,28 +1,23 @@
 {% extends "source.html" %} {% block content %}
-<form method="post">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col text-center">
-        <div class="container d-flex justify-content-center">
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col text-center">
+      <div class="container d-flex justify-content-center">
+        <form method="post">
           <input
             class="form-control"
-            class="form-text"
             type="text"
             name="input_"
+            id="input_"
             placeholder="Введите номер для удаления"
-            autofocus
           />
-          <button
-            class="btn btn-success btn-sm"
-            type="submit button"
-            id="btn_"
-            name="removeBtn"
-          >
+          <button type="submit" id="btn_" class="btn btn-success">
             Удалить!
           </button>
-        </div>
+        </form>
       </div>
+      <label class="text-success" id="result">{{result}}</label>
     </div>
   </div>
-  {% endblock %}
-</form>
+</div>
+{% endblock %}
