--- a/templates/source.html
+++ b/templates/source.html
@@ -9,7 +9,10 @@
     />
     <link rel="stylesheet" type="text/css" href="static/css/style.css" />
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <title>CarNumbers</title>
     <link rel="icon" href="/static/images/CarNumbers.ico" type="image/x-icon" />
   </head>
@@ -29,13 +32,22 @@
   </body>
   <footer role="contentinfo" class="container">
     <div id="footer_">
-      <a class="link-opacity-100 link-underline-info" href="{{ url_for('index') }}" id="link_"
-        >Домой</a
+      <a
+        class="link-opacity-100 link-underline-info"
+        href="{{ url_for('index') }}"
+        id="link_"
+        >Поиск</a
       >
-      <a class="link-opacity-100 link-underline-info" href="{{ url_for('add') }}" id="link_"
+      <a
+        class="link-opacity-100 link-underline-info"
+        href="{{ url_for('add') }}"
+        id="link_"
         >Добавить</a
       >
-      <a class="link-opacity-100 link-underline-info" href="{{ url_for('remove') }}" id="link_"
+      <a
+        class="link-opacity-100 link-underline-info"
+        href="{{ url_for('remove') }}"
+        id="link_"
         >Удалить</a
       >
     </div>
