--- a/templates/source.html
+++ b/templates/source.html
@@ -33,19 +33,19 @@
   <footer role="contentinfo" class="container">
     <div id="footer_">
       <a
-        class="link-opacity-100 link-underline-info"
+        class="link-opacity-100 link-opacity-25-hover link-underline-info"
         href="{{ url_for('index') }}"
         id="link_"
         >Поиск</a
       >
       <a
-        class="link-opacity-100 link-underline-info"
+        class="link-opacity-100 link-opacity-25-hover link-underline-info"
         href="{{ url_for('add') }}"
         id="link_"
         >Добавить</a
       >
       <a
-        class="link-opacity-100 link-underline-info"
+        class="link-opacity-100 link-opacity-25-hover link-underline-info"
         href="{{ url_for('remove') }}"
         id="link_"
         >Удалить</a
