--- a/templates/source.html
+++ b/templates/source.html
@@ -40,15 +40,9 @@
       >
       <a
         class="link-opacity-100 link-opacity-25-hover link-underline-info"
-        href="{{ url_for('add') }}"
+        href="{{ url_for('DB_login') }}"
         id="link_"
-        >Добавить</a
-      >
-      <a
-        class="link-opacity-100 link-opacity-25-hover link-underline-info"
-        href="{{ url_for('remove') }}"
-        id="link_"
-        >Удалить</a
+        >Редактировать БД</a
       >
     </div>
   </footer>
