--- a/templates/removeAdmin.html
+++ b/templates/removeAdmin.html
@@ -15,7 +15,7 @@
             type="text"
             name="input_"
             id="input_"
-            placeholder="Введите номер для удаления"
+            placeholder="Введите логин для удаления"
           />
           <button type="submit" id="btn_" class="btn btn-success">
             Удалить!
