--- a/templates/source.html
+++ b/templates/source.html
@@ -44,6 +44,12 @@
         id="link_"
         >Редактировать БД</a
       >
+      <a
+        class="link-opacity-100 link-opacity-25-hover link-underline-info"
+        href="{{ url_for('editAdmins_login') }}"
+        id="link_"
+        >Редактировать администраторов</a
+      >
     </div>
   </footer>
   <script src="static/scripts/themeToggle.js"></script>
