--- a/templates/source.html
+++ b/templates/source.html
@@ -50,6 +50,12 @@
         id="link_"
         >Редактировать администраторов</a
       >
+      <a
+        class="link-opacity-100 link-opacity-25-hover link-underline-info"
+        href="{{ url_for('editBL_login') }}"
+        id="link_"
+        >Редактировать ЧС</a
+      >
     </div>
   </footer>
   <script src="static/scripts/themeToggle.js"></script>
